@@ -16,6 +16,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #10974: IDLE no longer crashes if its recent files list includes files
+  with non-ASCII characters in their path names.
+
 - Have hashlib.algorithms_available and hashlib.algorithms_guaranteed both
   return sets instead of one returning a tuple and the other a frozenset.
 
